--- a/index.html
+++ b/index.html
@@ -2,17 +2,8 @@
 <html>
 
 <head>
-  <style>
-    html,
-    body,
-    iframe {
-      width: 100%;
-      height: 100%;
-    };
-    body {
-      margin: 0;
-    }
-  </style>
+  <title>Reagan's Resume</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
