--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <iframe src="https://reaganvu29.github.io/my_resume/my_resume.pdf" frameborder="0"></iframe>
+  <iframe src="https://reaganvu29.github.io/Reagan_Vu_Resume.pdf" frameborder="0"></iframe>
 </body>
 
 </html>
